Add new lectures & labs

--- a/2023-2024/Machine Learning/index.qmd
+++ b/2023-2024/Machine Learning/index.qmd
@@ -19,3 +19,8 @@ you have any questions or concerns, you can contact me using my email address `j
 
 - Lecture 1 - [Introduction](lecture-1.qmd)
 - Lecture 2 - [Linear Models](lecture-2.qmd)
+- Lecture 3 - [Evaluation of Models](lecture-3.qmd)
+
+## Labs
+
+- Lab 1 - [Linear Models](lab-1.qmd)
