--- a/2023-2024/Machine Learning/lab-2.qmd
+++ b/2023-2024/Machine Learning/lab-2.qmd
@@ -263,213 +263,20 @@ do we know that it's the best?
 
 # Marking Criteria
 
-<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-
-
-<colgroup>
-<col  class="org-left" />
-
-<col  class="org-right" />
-
-<col  class="org-left" />
-
-<col  class="org-left" />
-
-<col  class="org-left" />
-
-<col  class="org-left" />
-
-<col  class="org-left" />
-</colgroup>
-<thead>
-<tr>
-<th scope="col" class="org-left">&#xa0;</th>
-<th scope="col" class="org-right">&#xa0;</th>
-<th scope="col" class="org-left">0 %</th>
-<th scope="col" class="org-left">0-30 %</th>
-<th scope="col" class="org-left">30-80 %</th>
-<th scope="col" class="org-left">80-100 %</th>
-<th scope="col" class="org-left">&#xa0;</th>
-</tr>
-
-
-<tr>
-<th scope="col" class="org-left"><b>Criteria</b></th>
-<th scope="col" class="org-right"><b>Marks</b></th>
-<th scope="col" class="org-left"><b>No attempted</b></th>
-<th scope="col" class="org-left"><b>Attempted</b></th>
-<th scope="col" class="org-left"><b>Correct</b></th>
-<th scope="col" class="org-left"><b>Good solution</b></th>
-<th scope="col" class="org-left"><b>Score</b></th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-<td class="org-left">Question 1</td>
-<td class="org-right">0</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 2</td>
-<td class="org-right">10</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 3</td>
-<td class="org-right">15</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 4</td>
-<td class="org-right">20</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 5</td>
-<td class="org-right">5</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 6</td>
-<td class="org-right">5</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 7</td>
-<td class="org-right">5</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 8</td>
-<td class="org-right">10</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 9</td>
-<td class="org-right">10</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Question 10</td>
-<td class="org-right">10</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-</tbody>
-
-<tbody>
-<tr>
-<td class="org-left">Code comments are helpful</td>
-<td class="org-right">2</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Variable names are descriptive</td>
-<td class="org-right">2</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Functions include docstrings</td>
-<td class="org-right">2</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-
-<tr>
-<td class="org-left">Functions are generic</td>
-<td class="org-right">4</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-</tbody>
-
-<tbody>
-<tr>
-<td class="org-left">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left"><b>Total</b></td>
-<td class="org-left">&#xa0;</td>
-</tr>
-</tbody>
-</table>
-
+| **Criteria**                   | **Marks** | **Not attempted** (0%) | **Attempted** (0-30%) | **Correct** (30-80%) | **Good solution** (80-100%) | **Score** |
+|----|----|----|----|----|----|----|
+| Question 1                     | 0        |     -             |               |             |                   |           |
+| Question 2                     | 10        |                  |               |             |                   |           |
+| Question 3                     | 15        |                  |               |             |                   |           |
+| Question 4                     | 20         |                  |               |             |                   |           |
+| Question 5                     | 5        |                  |               |             |                   |           |
+| Question 6                     | 5        |                  |               |             |                   |           |
+| Question 7                     | 5        |                  |               |             |                   |           |
+| Question 8                     | 10        |                  |               |             |                   |           |
+| Question 9                     | 10         |                  |               |             |                   |           |
+| Question 10                    | 10         |                  |               |             |                   |           |
+| Code comments are helpful      | 2         |                  |               |             |                   |           |
+| Variable names are descriptive | 2         |                  |               |             |                   |           |
+| Functions include docstrings   | 2         |                  |               |             |                   |           |
+| Functions are generic          | 4         |                  |               |             |                   |           |
+|                                |           |                  |               |             | **Total**         |           |
