Add lecture-5.qmd to _quarto.yml and update index.qmd

--- a/2023-2024/Machine Learning/lecture-5.qmd
+++ b/2023-2024/Machine Learning/lecture-5.qmd
@@ -1,5 +1,5 @@
 ---
-title: "K Nearest Neighbour & K-Means"
+title: "K-Nearest Neighbour & K-Means"
 subtitle: "Lecture 5"
 author: "Jay Paul Morgan"
 format:
